<?xml version="1.0"?>
<package>
  <name>iap_tutorial</name>
  <version>0.0.0</version>
  <description>The iap_tutorial package</description>
  <maintainer email="baian@mit.edu">andrew</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <export>
  </export>
</package>
